# OpenApiGateway

./: .editorconfig  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md  ROADMAP.md
.github/: pull_request_template.md
.github/workflows/: docker-publish.yml  quality-gates.yml
configs/: envoy-xds-bootstrap.yaml
controlplane/: Cargo.toml  build.rs
controlplane/src/: main.rs  proto.rs  startup.rs
controlplane/src/admin/: handlers.rs  handlers_tests.rs  mod.rs  responses.rs  state.rs
controlplane/src/auth/: error.rs  integration_tests.rs  jwks_cache.rs  mod.rs  registry.rs  types.rs  validator.rs  validator_tests.rs
controlplane/src/config/: envoy_ext_authz.rs  envoy_gen.rs  envoy_gen_tests.rs  loader.rs  mod.rs  route_matching_tests.rs  validation.rs  validation_edge_tests.rs  validation_tests.rs
controlplane/src/extauthz/: auth_step.rs  handler.rs  handler_tests.rs  helpers.rs  mod.rs  plugin_step.rs
controlplane/src/extproc/: mod.rs  processor.rs  server.rs
controlplane/src/observability/: logs.rs  metrics.rs  metrics_tests.rs  mod.rs  observability_tests.rs  tracing_init.rs
controlplane/src/plugins/: executor.rs  executor_tests.rs  mod.rs  pool.rs  registry.rs  registry_tests.rs  sandbox.rs  sdk.rs  types.rs
controlplane/src/ratelimit/: bucket.rs  error.rs  limiter.rs  limiter_ext_tests.rs  lua.rs  mod.rs
controlplane/src/xds/: mod.rs  protocol.rs  registry.rs  resources.rs  server.rs  snapshot.rs  version.rs
dataplane/: Cargo.toml
dataplane/src/: main.rs
deployments/docker-compose/: README.md  docker-compose.yml
deployments/docker-compose/configs/: envoy-lb.yaml  gateway-multi-node.yaml
deployments/grafana/dashboards/: gateway-overview.json
deployments/prometheus/: alert_rules.yml  prometheus-multi.yml  prometheus.yml
docs/adr/: 0001-jwt-jwks-crates.md  0002-redis-rate-limiter-crate.md  0003-observability-crates.md  0004-http-ext-authz-over-grpc.md  0005-dynamic-extensibility-control-plane.md
docs/architecture/: API_GATEWAY_DESIGN.md
docs/decisions/: V1_IMPLEMENTATION_DECISIONS.md
examples/configs/: gateway-single-node.yaml
examples/single-node/: README.md  docker-compose.yml  prometheus.yml
examples/single-node/jwks/: jwks.json  private.pem
plugins/: api-key-auth.lua  basic-auth.lua  cors.lua  ip-restriction.lua  request-size-limiting.lua  request-transformer.lua
proto/envoy/config/cluster/v3/: cluster.proto
proto/envoy/config/core/v3/: base.proto
proto/envoy/config/endpoint/v3/: endpoint.proto
proto/envoy/config/listener/v3/: listener.proto
proto/envoy/config/route/v3/: route.proto
proto/envoy/extensions/filters/http/ext_authz/v3/: ext_authz.proto
proto/envoy/extensions/filters/http/ext_proc/v3/: ext_proc.proto
proto/envoy/extensions/filters/http/router/v3/: router.proto
proto/envoy/extensions/filters/network/http_connection_manager/v3/: http_connection_manager.proto
proto/envoy/service/discovery/v3/: ads.proto  discovery.proto
proto/envoy/service/ext_proc/v3/: external_processor.proto
scripts/: README.md  gen-jwt-dev.py  smoke-test.sh
services/gateway-manager/: Dockerfile
shared/: Cargo.toml
shared/src/: config_error.rs  config_types.rs  error.rs  lib.rs
specs/: admin-api.md  auth.md  base-case-implementation-spec.md  config-schema.md  observability.md  rate-limiting.md
test_fixtures/: rsa_private_2.pem  rsa_public.pem  rsa_public_2.pem
tests/e2e/: docker-compose.yml  gateway-manager.Dockerfile  jwks.Dockerfile  run.sh
tests/e2e/configs/: gateway-test.yaml
tools/: check-loc.sh
