[package]
name = "controlplane"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde_yaml = { workspace = true }
url = { workspace = true }
axum = { workspace = true }
sha2 = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
redis = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
