[package]
name = "controlplane"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde_yaml = { workspace = true }
url = { workspace = true }
axum = { workspace = true }
sha2 = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
redis = { workspace = true }
prometheus = { workspace = true }
chrono = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
mlua = { workspace = true }
jsonschema = { workspace = true }
dashmap = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
